[tool.poetry]
name = "dukasino"
version = "0.1.0"
description = "Telegram Casino Bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-telegram-bot = "20.7"
Flask = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
